@@ -1,3 +1,9 @@
+2008-10-20  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* src/Backends/Rtm/RtmPreferencesWidget.cs: Don't crash if default
+	browser isn't set, and mark some old strings for translation.  Fixes
+	bug #552944, patch courtesy of Loganathan Subramaniam.
+
 2008-10-15  Johnny Jacob  <johnnyjacob@gmail.com>
 
 	* src/Backends/Hiveminder/HmBackend.cs: Use Path.DirectorySeperatorChar.
